--- a/index.html
+++ b/index.html
@@ -7,20 +7,32 @@
     <link rel="stylesheet" href="css/common.css" />
     <link rel="stylesheet" href="css/index.css" />
   </head>
+
   <body>
     <section id="hero">
       <div class="hero_bg_box"></div>
       <div class="home_link">
         <a href="#">
-          이름을 <br>
-          입력해 <br>
-          주세요
+          YEONG <br>
+          SIN <br>
+          JOUNG 
+        </a>
+      </div>
+      <div class="mail_link">
+        <a href="#">
+          <svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 294.4003906 195.4003906" style="enable-background:new 0 0 294.4003906 195.4003906;" xml:space="preserve">
+            <g>
+              <path class="st0" d="M0,0v195.4003906h294.4003906V0H0z M282.4003906,183.4003906H12V12h270.4003906V183.4003906z"></path>
+              <polygon class="st0" points="221.0522461,71.7148438 213.1479492,62.6855469 145.7451172,121.6865234 79.902832,62.7304688
+                71.8979492,71.6699219 145.6552734,137.7138672 	"></polygon>
+            </g>
+            </svg>
         </a>
       </div>
       <div class="main_nav">
         <ul>
-          <li class="nav_conts nav_work"><a>work</a></li>
-          <li class="nav_conts nav_about""><a>about</a></li>
+          <li class="nav_conts nav_work"><a href="works/works.html">works</a></li>
+          <li class="nav_conts nav_about""><a href="#">about</a></li>
         </ul>
       </div>
     </section>
