left 이동 해결 됐어요
그냥 무식하게 계산해서 넣었습니다

--- a/works/works.html
+++ b/works/works.html
@@ -38,7 +38,7 @@
 
 
 
-    <div id="works_container">
+    <div class="works_container">
       <ul class="works_wrap">
         <li class="item large ">
           <div class="item_bgcolor1">
