--- a/about/about.html
+++ b/about/about.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>about</title>
     <link rel="stylesheet" href="../css/common.css">
     <link rel="stylesheet" href="../css/about.css">
 
@@ -79,6 +79,10 @@
                 <li>9040 Ghent, Belgium</li>
             </ul>
         </section>
+        <ul class="contact_4">
+          <li>Ferdinand Snellaertplein 17</li>
+          <li>9040 Ghent, Belgium</li>
+        </ul>
 
     </article>
 </body>
