--- a/works/works.html
+++ b/works/works.html
@@ -31,7 +31,7 @@
     </div>
     <div class="main_nav">
       <ul>
-        <li class="nav_conts nav_work"><a href="../works/works.html">works</a></li>
+        <li class="nav_conts nav_work"><a href="../works/works.html">work</a></li>
         <li class="nav_conts nav_about""><a href="#">about</a></li>
       </ul>
     </div>
