--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -3,36 +3,62 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Portfolio</title>
+    <title>Document</title>
+    <link rel="stylesheet" href="css/common.css" />
     <link rel="stylesheet" href="css/styles.css" />
-    <script
-      src="https://kit.fontawesome.com/a783be06bc.js"
-      crossorigin="anonymous"
-    ></script>
   </head>
+
   <body>
-    <section id="whole_wrap">
-      <div class="menu_home">
-        <a href=""> DRIES <br />VAN <br />BROECK </a>
+    <section id="hero">
+      <div class="hero_bg_box"></div>
+      <div class="home_link">
+        <a href="#">
+          YOUNG<br>
+          Bo <br>
+          KIM 
+        </a>
       </div>
-      <div class="intro_text">
-        <span>Hi. I'm Front-end Developer</span>
+      <div class="mail_link">
+        <a href="#">
+          <svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 294.4003906 195.4003906" style="enable-background:new 0 0 294.4003906 195.4003906;" xml:space="preserve">
+            <g>
+              <path class="st0" d="M0,0v195.4003906h294.4003906V0H0z M282.4003906,183.4003906H12V12h270.4003906V183.4003906z"></path>
+              <polygon class="st0" points="221.0522461,71.7148438 213.1479492,62.6855469 145.7451172,121.6865234 79.902832,62.7304688
+                71.8979492,71.6699219 145.6552734,137.7138672 	"></polygon>
+            </g>
+            </svg>
+        </a>
       </div>
-      <div class="menu_mail_link">
-        <i class="far fa-envelope fa-3x"></i>
-      </div>
-      <div class="bg_box"></div>
-      <nav class="home_menu_list">
-        <ul>
-          <li class="home_menu_work"><a href="">work</a></li>
-          <li class="home_menu_about"><a href="">about</a></li>
+
+      <div id="slide_wrap">
+        <ul id="slide">
+          <li class="slide_contents">
+            <img src="img/Website.gif" alt="" />
+            <p>Showreel 2019</p>
+          </li>
+          <li class="slide_contents">
+            <img src="img/Thumb_700x700.gif" alt="" />
+            <p>VVA</p>
+          </li>
+          <li class="slide_contents">
+            <img src="img/Anim-0-00-03-00.jpg" alt="" />
+            <p>Gent M</p>
+          </li>
+          <li class="slide_contents">
+            <img src="img/new_16-2.gif" alt="" />
+            <p>View more</p>
+          </li>
         </ul>
-      </nav>
+      </div>
+
+      <div class="main_nav">
+        <ul>
+          <li class="nav_conts nav_work"><a href="works/works.html">works</a></li>
+          <li class="nav_conts nav_about""><a href="#">about</a></li>
+        </ul>
+      </div>
     </section>
-    <script
-      type="text/javascript"
-      src="http://ajax.googleapis.com/ajax/libs/jquery/1.3.2/jquery.min.js?ver=1.3.2"
-    ></script>
-    <script type="text/javascript" src="/js/jquery.mousewheel.min.js"></script>
+    <script src="js/index.js"></script>
   </body>
 </html>
+
