--- a/index.html
+++ b/index.html
@@ -3,19 +3,19 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>Portfolio</title>
     <link rel="stylesheet" href="css/common.css" />
-    <link rel="stylesheet" href="css/index.css" />
+    <link rel="stylesheet" href="css/styles.css" />
   </head>
 
   <body>
     <section id="hero">
       <div class="hero_bg_box"></div>
       <div class="home_link">
-        <a href="#">
-          YEONG <br>
-          SIN <br>
-          JOUNG 
+        <a href="index.html">
+          YOUR<br>
+          NAME<br>
+          HERE 
         </a>
       </div>
       <div class="mail_link">
@@ -29,12 +29,36 @@
             </svg>
         </a>
       </div>
+
+      <div id="slide_wrap">
+        <ul id="slide">
+          <li class="slide_contents">
+            <img src="img/Website.gif" alt="" />
+            <p>Showreel 2019</p>
+          </li>
+          <li class="slide_contents">
+            <img src="img/Thumb_700x700.gif" alt="" />
+            <p>VVA</p>
+          </li>
+          <li class="slide_contents">
+            <img src="img/Anim-0-00-03-00.jpg" alt="" />
+            <p>Gent M</p>
+          </li>
+          <li class="slide_contents">
+            <img src="img/new_16-2.gif" alt="" />
+            <p>View more</p>
+          </li>
+        </ul>
+      </div>
+
       <div class="main_nav">
         <ul>
-          <li class="nav_conts nav_work"><a href="works/works.html">works</a></li>
-          <li class="nav_conts nav_about""><a href="#">about</a></li>
+          <li class="nav_conts nav_work"><a href="sub/works.html">work</a></li>
+          <li class="nav_conts nav_about""><a href="sub/about.html">about</a></li>
         </ul>
       </div>
     </section>
+    <script src="js/index.js"></script>
   </body>
 </html>
+
