--- a/sub/detail.html
+++ b/sub/detail.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Detail</title>
+    <title>Document</title>
     <link rel="stylesheet" href="../css/common.css" />
     <link rel="stylesheet" href="../css/detail.css" />
   </head>
@@ -27,7 +27,7 @@
       <div class="home_link">
         <a href="../index.html">
           YOUR <br>
-          NAME <br>
+          NEME <br>
           HERE
         </a>
       </div>
@@ -71,6 +71,8 @@
               <p>기여도%</p>
               <h3>Use Tool</h3>
               <p>html css javascript</p>
+
+
             </div>
           </div>
         </div>
