--- a/sub/detail.html
+++ b/sub/detail.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="../css/detail.css" />
   </head>
   <body>
-    <svg version="1.1" class="icon_close" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 120 120" style="enable-background:new 0 0 120 120;" xml:space="preserve">
+    <svg version="1.1" class="icon_close" onclick="history.back()" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 120 120" style="enable-background:new 0 0 120 120;" xml:space="preserve">
       <style type="text/css">
       </style>
       <g>
