--- a/scrolltest/index.html
+++ b/scrolltest/index.html
@@ -7,15 +7,23 @@
     <link rel="stylesheet" href="css/styles.css" />
   </head>
   <body>
-    <div class="slide_wrap">
-      <ul class="slide">
-        <li><img src="img/Website.gif" alt="" /></li>
-        <li><img src="img/Thumb_700x700.gif" alt="" /></li>
-        <li>
-          <img src="img/Anim-0-00-03-00.jpg" alt="" />
+    <div id="slide_wrap">
+      <ul id="slide">
+        <li class="slide_contents">
+          <img src="img/Website.gif" alt="" />
+          <p>Showreel 2019</p>
         </li>
-        <li>
+        <li class="slide_contents">
+          <img src="img/Thumb_700x700.gif" alt="" />
+          <p>VVA</p>
+        </li>
+        <li class="slide_contents">
+          <img src="img/Anim-0-00-03-00.jpg" alt="" />
+          <p>Gent M</p>
+        </li>
+        <li class="slide_contents">
           <img src="img/new_16-2.gif" alt="" />
+          <p>View more</p>
         </li>
       </ul>
     </div>
