--- a/sub/detail.html
+++ b/sub/detail.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>Portfolio ㅣ Ferrari</title>
     <link rel="stylesheet" href="../css/common.css" />
     <link rel="stylesheet" href="../css/detail.css" />
   </head>
@@ -51,26 +51,27 @@
 
       
       <article class="detail_container">
-        <h1 class="detail_header">Title</h1>
+        <h1 class="detail_header">Ferrari</h1>
         <p class="detail_subtitle"> Clone Coding</p>
         <div class="detail_conts">
-          <img class="detail_img">
+          <img class="detail_img" src="../img/thumbnail_ferrari_img.png">
           <div class="detail_text_wrap">
             <div class="detail_expaine">
               <h3>Detail</h3>
-              <p>작품의 소개를 써주세요작품의 소개를 써주세요작품의 소개를 써주세요작품의 소개를 써주세요작품의 소개를 써주세요작품의 소개를 써주세요작품의 소개를 써주세요작품의 소개를 써주세요작품의 소개를 써주세요작품의 소개를 써주세요작품의 소개를 써주세요작품의 소개를 써주세요작품의 소개를 써주세요작품의 소개를 써주세요작품의 소개를 써주세요작품의 소개를 써주세요작품의 소개를 써주세요작품의 소개를 써주세요작품의 소개를 써주세요작품의 소개를 써주세요작품의 소개를 써주세요작품의 소개를 써주세요작품의 소개를 써주세요</p>
+              <p>팀 구성원 : 김영보, 류희경, 안재민, 정영신<br><br>
+                4인으로 팀을 구성하여 Ferrari의 홈페이지 웹사이트를 클론 코딩하여 구현하였습니다. 공동의 css를 정의 하여 이를 기반으로 각각의 페이지를 맡아 팀작업을 하였습니다. 3주간의 기간동안 총 4페이지를 작업하였고 반응형까지 완성하였습니다. 또한 라이브러리를 사용하기보다 직접 javascript로 대부분을 코딩하였습니다.  </p>
             </div>
             <div class="detail_work">
               <h3>Production</h3>
-              <p>제작자 이름</p>
+              <p>Team project</p>
               <h3>Brand</h3>
-              <p>브랜드이름</p>
-              <h3>Production</h3>
-              <p>제작자 이름</p>
+              <p>Ferrari</p>
               <h3>Contribution</h3>
-              <p>기여도%</p>
+              <p>100%</p>
               <h3>Use Tool</h3>
               <p>html css javascript</p>
+              <h3>Link</h3>
+              <p><a href="https://beals1129.github.io/Ferrari/index.html">https://beals1129.github.io/Ferrari/index.html</a></p>
 
 
             </div>
